Tp6/config/cluster/apps_deploys_services.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: strapi-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: strapi-pods
  template:
    metadata:
      labels:
        app: strapi-pods
    spec:
      containers:
      - name: strapi
        image: strapi/strapi
        imagePullPolicy: IfNotPresent        
        ports:
        - containerPort: 1337
---
apiVersion: v1      
kind: Service
metadata:
  name: strapi-svc
spec:
  selector:
    app: strapi-pods
  ports:
  - protocol: TCP
    port: 30100
    targetPort: 1337
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mongo-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mongo-pods
  template:
    metadata:
      labels:
        app: mongo-pods
    spec:
      containers:
      - name: mongo-cont
        image: mongo
        imagePullPolicy: IfNotPresent        
        ports:
        - containerPort: 27017
---
apiVersion: v1      
kind: Service
metadata:
  name: mongo-svc
spec:
  selector:
    app: mongo-pods
  ports:
  - protocol: TCP
    port: 30101
    targetPort: 27017
---
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: ingress
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/secure-backends: "true"
spec:
  tls:
  - hosts:
    - server.com
    secretName: server-com-cert
  rules:
  - host: strapi.server.com
    http:
      paths:
      - backend:
          serviceName: strapi-svc
          servicePort: 30100
